[tool.poetry]
name = "repl_nix_drpy"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
jsonpath = "^0.82"
Werkzeug = "^2.2.2"
pyquery = "^1.4.3"
easydict = "^1.9"
Flask-SQLAlchemy = "^2.5.1"
gevent = "^21.12.0"
Js2Py = "^0.71"
parsel = "^1.6.0"
psutil = "^5.9.2"
lxml = "^4.9.1"
Flask-Migrate = "^3.1.0"
Flask = "^2.2.2"
func-timeout = "^4.3.5"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
